# cloudnative-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .releaserc.json  1  CHANGELOG.md  Makefile  README.md  docker-compose.yml  on.bash  simple_bash.bash  temp.bash
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/actions/eks-connect/: action.yml
.github/workflows/: .promote_staging.yml  cd.yml  ci.yml  promote-prod.yml  promote-staging.yml  release.yml  terraform.yml
apps/api/: .trivyignore  Dockerfile  pyproject.toml  test.db
apps/api/src/: config.py  database.py  logger.py  main.py
apps/api/src/models/: product.py
apps/api/src/routers/: health.py  products.py
apps/api/tests/: conftest.py  test_health.py  test_products.py
apps/frontend/: Dockerfile  package  package-lock.json  package.json
apps/worker/: Dockerfile
charts/api/: Chart.yaml  values-dev.yaml  values-staging.yaml  values.yaml  vlaues-prod.yaml
docs/architecture/: dora-metrics.md
gitops/argocd/: app-of-apps.yaml
infra/global/: outputs.tf  s3-state.tf  variables.tf
k8s/: bootstrap.sh  namespaces.yaml
k8s/cluster-addons/: cert-manager.yaml  ingress-nginx.yaml  metrics-server.yaml
k8s/scripts/: ecr-push-and-bootstrap.sh  eks-tunnel.sh
observability/: otel-config.yml  prometheus.yml
observability/alerts/: api-alerts.yml  infra-alerts.yml
observability/k6/: synthetic-monitor.js
observability/k8s/: monitoring-stack.yaml
observability/runbooks/: high-error-rate.md  pod-crashloop.md
security/policies/: no-latest-tag.rego
(+53 files in other folders)
