[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "cloudnative-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "aiokafka>=0.10.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.1.0",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "testcontainers[postgresql,redis]>=4.0.0",
    "factory-boy>=3.3.0",
]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=70"
 
[tool.black]
line-length = 100
target-version = ["py311"]
 
[tool.isort]
profile = "black"
line_length = 100
 
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
